# teb

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  LICENSE  MISSING.md  Makefile  README.md  SECURITY.md  SOLID_REORGANIZATION_PLAN.md  analysis.txt  arch.txt  diff.txt  docker-compose.prod.yml  docker-compose.yml  gaussian_file_sorter.html  language_robustness_comparison.html  pyproject.toml  requirements.txt  start.sh  teb2_1970s_audit.html  teb2_architecture.html  teb2_complete_file_relations.html  teb2_enigma_audit.html  teb2_file_schema.html  teb2_ibm701_reality.html  teb2_io_schema.html  teb2_knr_replacements.html  teb_robust_replacements.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: my-agent.agent.md  solid-refactor.md  teb.agent.md
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  publish.yml
benchmarks/: bench.py
deploy/: README.md  backup.sh  docker-entrypoint.sh  server-setup.sh
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
deploy/systemd/: teb-backup.service  teb-backup.timer  teb.service
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: AUDITS_INDEX.md  api-clients.md  architecture.md  faq.md  plugin-guide.md  quickstart.md  tutorials.md  user-guide.md  webhooks.md
migrations/: migrate.py
migrations/versions/: 0001_baseline.sql  0002_task_priority.sql  0003_agent_activity.sql  README.md
nginx/: teb.conf
scripts/: reorganize.sh
teb/: __init__.py  agents.py  ai_client.py  auth.py  browser.py  cache.py  config.py  dag.py  decomposer.py  deployer.py  discovery.py  events.py  executor.py  gamification.py  importers.py  integrations.py  intelligence.py  logging_config.py  main.py  mcp_client.py  mcp_server.py  memory.py  messaging.py  middleware.py  models.py  nlp_input.py  payments.py  pg_migrate.py  plugins.py  provisioning.py  reporting.py  scheduler.py  search.py  security.py  state_machine.py  storage.py  success_graph.py  totp.py  transcribe.py  webhooks.py  (+1 more)
teb/channels/: __init__.py  base.py  discord.py  router.py  slack.py  whatsapp.py
teb/routers/: __init__.py  admin.py  agents.py  auth.py  collaboration.py  community.py  deps.py  enterprise.py  execution.py  financial.py  gamification.py  goals.py  health.py  integrations.py  intelligence.py  mcp.py  messaging.py  notifications.py  plugins.py  settings.py  tasks.py
teb/static/: app.js  manifest.json  style.css  sw.js
teb/static/views/: calendar.js  charts.js  gantt.js  kanban.js  mindmap.js  table.js  timeline.js  workload.js
teb/storage/: __init__.py  _monolith.py  base.py  crud.py
teb/templates/: index.html
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_architecture_features.py  test_architecture_overhaul.py  test_autopilot_features.py  test_bridging_features.py  test_bridging_phases.py  test_bridging_plan.py  test_browser_integrations.py  test_checkin.py  test_decomposer.py  test_executor.py  test_grade_bridging.py  test_mega_wp07_to_wp20.py  test_mvp_features.py  test_new_features.py  test_payment_hardening.py  test_phase2_collab.py  test_phase4_intelligence.py  test_phase6_enterprise.py  test_phases5_to_8.py  test_plan_features.py  test_professional_quality.py  test_real_behaviors.py  test_roi_and_learning.py  test_security_fixes.py  test_shipping_ready.py
web/frontend/: index.html  login.html  register.html
